feature: added snapshot read endpoints, updated swagger and edited front
